--- a/templates/authentication/log-in.html
+++ b/templates/authentication/log-in.html
@@ -14,14 +14,14 @@
                 <hr>
                 <br>
                 <div class="forms">
-                    <i class="fa-solid fa-user" style="color: #ebedef;"></i>
+                    <i class="fa-solid fa-user fa" style="color: #ebedef;"></i>
                     <label for="username">Username</label>
                     <input type="text" name="username" placeholder="Enter username" required>
                     {% comment %} <span class="error" >Title is required</span> {% endcomment %}
                 </div>
 
                 <div class="forms">
-                    <i class="fa-solid fa-unlock" style="color: #e3e5e8;"></i>
+                    <i class="fa-solid fa-unlock fa" style="color:rgb(250, 250, 251);"></i>
                     <label for="password">Password</label>
                     <input type="password" name="password" placeholder="Enter password" required>
                     <i class='bx bx-hide eye-icon'></i>
