--- a/templates/task-app/add-task.html
+++ b/templates/task-app/add-task.html
@@ -5,6 +5,7 @@
 {% block title %}Task Form{% endblock title %}
 
 {% block body %}
+<header class ="top_logo"><a href="{% url 'task_app:home' %}">ChoreChampion</a></header>
 
 <div class="background">
     <div class="intro-container">
