--- a/templates/task-app/dashboard.html
+++ b/templates/task-app/dashboard.html
@@ -5,6 +5,7 @@
 {% block title %}dashboard{% endblock title %}
 
 {% block body %}
+<header class ="top_logo"><a href="{% url 'task_app:home' %}">ChoreChampion</a></header>
 
     <div class="popup hidden">
         <button id="close">&times</button>
