--- a/templates/task-app/home.html
+++ b/templates/task-app/home.html
@@ -6,7 +6,7 @@
 
 {% block body %}
     <header>
-        {% comment %} <a href="{% url 'task_app:home' %}" class="brand">ChoreChampion</a> {% endcomment %}
+        <a href="{% url 'task_app:home' %}" class="top_logo">ChoreChampion</a>
         <div class="navbar">
             <div class="navbar-options">
                 <a href="{% url 'task_app:dashboard' %}">Dashboard</a>
