--- a/templates/task-app/update-task.html
+++ b/templates/task-app/update-task.html
@@ -5,6 +5,8 @@
 {% block title %}Update_task{% endblock title %}
 
 {% block body %}
+<header class ="top_logo"><a href="{% url 'task_app:home' %}">ChoreChampion</a></header>
+
 <div class="background-text-color">
     <h1>Update Task</h1>
     <p style="font-size: 20px;text-align: center;margin-top: 300px;margin-right: 100px;"class="text-task">...dare yourself</p>
