--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -1,5 +1,5 @@
 {% load static %}
-<header class ="top_logo"><a href="{% url 'task_app:home' %}">ChoreChampion</a></header>
+{% comment %} <header class ="top_logo"><a href="{% url 'task_app:home' %}">ChoreChampion</a></header> {% endcomment %}
 
 
     <div class="greeting" id="timeGreeting">
